--- a/server/database/config/.env
+++ b/server/database/config/.env
@@ -1,5 +1,5 @@
 DB_USER=postgres
-DB_PASSWORD=Abaco123
-DB_HOST=150.136.56.26
+DB_PASSWORD=admin
+DB_HOST=localhost
 DB_PORT=5432
-DB_DATABASE=covidapp
+DB_DATABASE=postgres
